--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@
     .carousel-header .carousel-inner .carousel-item img,
     .carousel-header .carousel-inner .carousel-item .carousel-caption {
         height: 700px;
-        /* margin-top: -100px; */
+        margin-top: -100px;
     }
 
     .carousel-header {
