--- a/css/style.css
+++ b/css/style.css
@@ -1289,12 +1289,12 @@
     width:290px;   
   }    
 
-  .small-img {
+  /* .small-img {
     left: -25px;          
     top: 70%;          
     width: 140px;         
     height: 140px;
-  }
+  } */
 }
 
 /* highlight end */
