--- a/css/style.css
+++ b/css/style.css
@@ -344,8 +344,10 @@
 
 .carousel-header .carousel-inner .carousel-item {
     position: relative;
-    min-height: 100vh 
+    min-height: 100vh;
 }
+
+
 
 .carousel-header .carousel-inner .carousel-item img {
     position: absolute;
