--- a/css/style.css
+++ b/css/style.css
@@ -695,7 +695,7 @@
 }
 
 .ExploreTour #NationalTab-1 .national-item:hover .national-content {
-    background: rgba(19, 53, 123, .6);
+background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.9));
 }
 
 .ExploreTour #NationalTab-1 .national-item .national-plus-icon {
@@ -1277,17 +1277,17 @@
 .small-img {
   position: absolute;
   left: -80px;              
-  top: 70%;                 
+  top: 60%;                 
   transform: translateY(-50%);
-  width: 140px;
-  height: 180px;
+  width: 200px;
+  height: 240px;
   border-radius: 12px;
   border: 3px solid #fff;
   object-fit: cover;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
 }
 
-/* 📱 Mobile view (max 576px) */
+/*  Mobile view (max 576px) */
 @media (max-width: 576px) {
   .frame {
     width: 100%;        
